--- a/index.html
+++ b/index.html
@@ -41,25 +41,25 @@
       <div class="container-fluid">
           <div class="row" >
               <div class="col-md-6 p-2" id="profile">
-                <img src="./assets/img/profile.jpg" class="img-fluid mx-auto d-block profile-me"/>
+                <img src="./profile.jpg" class="img-fluid mx-auto d-block profile-me"/>
                 <h1 class="display-4 text-center">Rohit Sonwane</h1>
                 <h4 class=" text-center">Student|Web Developer</h4>
 
                 <div class="d-flex justify-content-evenly px-5">
                     <a href="https://www.linkedin.com/in/rohitsonwane652/" target="_blank" class="icon-logo-container">
-                        <img src="./assets/logo/linkedin-logo.png" class="img-fluid mx-auto d-block icon-logo"/>
+                        <img src="./linkedin-logo.png" class="img-fluid mx-auto d-block icon-logo"/>
                     </a>
 
                     <a href="https://github.com/rohitsonwane652" target="_blank" class="icon-logo-container">
-                        <img src="./assets/logo/github-logo.png" class="img-fluid mx-auto d-block icon-logo"/>
+                        <img src="./github-logo.png" class="img-fluid mx-auto d-block icon-logo"/>
                     </a>
 
                     <a href="mailto:rohitsonwane652@gmail.com" target="_blank" class="icon-logo-container">
-                        <img src="./assets/logo/gmail-logo.png" class="img-fluid mx-auto d-block icon-logo"/>
+                        <img src="./gmail-logo.png" class="img-fluid mx-auto d-block icon-logo"/>
                     </a>
                     
                     <a href="tel:+918329183660" target="_blank" class="icon-logo-container">
-                        <img src="./assets/logo/call-logo.png" class="img-fluid mx-auto d-block icon-logo"/>
+                        <img src="./call-logo.png" class="img-fluid mx-auto d-block icon-logo"/>
                     </a>
                 </div>
               </div>
@@ -93,7 +93,7 @@
             <h1 class="text-center display-3"><i class="fas fa-laptop-code me-2 display-4"></i>Projects</h1>
             <div class="row p-3 mt-3 project-container" id="project-1">
               <div class="col-md-4">
-                <img src="./assets/img/project-1.jpg" alt="project1" class="img-fluid project-img">
+                <img src="./project-1.jpg" alt="project1" class="img-fluid project-img">
               </div>
               <div class="col-md-8">
                 <h3>TODO App</h3>
@@ -111,7 +111,7 @@
 
             <div class="row p-3 mt-3 project-container" id="project-2">
               <div class="col-md-4">
-                <img src="./assets/img/Project2.jpg" alt="project2" class="img-fluid project-img">
+                <img src="./Project2.jpg" alt="project2" class="img-fluid project-img">
               </div>
               <div class="col-md-8">
                 <h3>Cryptocurrency API </h3>
@@ -129,7 +129,7 @@
 
             <div class="row p-3 mt-3 project-container" id="project-3">
               <div class="col-md-4">
-                <img src="./assets/img/Project3.jpg" alt="project3" class="img-fluid project-img">
+                <img src="./Project3.jpg" alt="project3" class="img-fluid project-img">
               </div>
               <div class="col-md-8">
                 <h3>Score Keeper</h3>
